--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
       - "8501:8501"
     restart: unless-stopped
     volumes:
-      - .:/app 
+      - .:/app
+    environment:
+      - PYTHONUNBUFFERED=1
