--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ pillow==9.5.0
 seaborn==0.12.2
 scikit-learn==1.2.2
 gdown==4.7.1
-fpdf==1.7.2
+fpdf2==3.0.0
+reportlab==4.0.4
 pandas==2.0.3
 plotly==5.15.0
