--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,3 +2,10 @@
 maxUploadSize = 500
 port = 8501
 address = "0.0.0.0"
+
+[theme]
+base = "light"
+primaryColor = "#2E7D32"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
